# Ray-Tracer-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/geometry/: Color.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  SurfacePoint.h  Vector3D.cpp  Vector3D.h
src/lighting/: DirectionalLight.cpp  DirectionalLight.h  LightSource.cpp  LightSource.h  Luminance.cpp  Luminance.h
src/render/: Pixel.h  PixelData.cpp  PixelData.h
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  CameraCapture.cpp  CameraCapture.h  Screen.cpp  Screen.h
test/: test.cpp
test/geometry/: Color_test.cpp  Ray_test.cpp  Sphere_test.cpp  Vector3D_test.cpp
test/lighting/: DirectionalLight_test.cpp
test/scene/: Screen_test.cpp
